--- a/site01/index.html
+++ b/site01/index.html
@@ -45,10 +45,10 @@
 	<footer>
 		
 		<p><h3>FRED TREINAMENTOS LTDA</h3></p>
-		<p class="contato"><b>CONTATOS:</b></p>
-		<p class="contato">WHATSAPP:(31) 985432808</p>
-		<p class="contato">EMAIL:fredericofernandes560@gmail.com.br</p>
-		<p class="contato">CNPJ:00.000.000/0001-00</p>
+		<p><b>CONTATOS:</b></p>
+		<p>WHATSAPP:(31) 985432808</p>
+		<p>EMAIL:fredericofernandes560@gmail.com.br</p>
+		<p>CNPJ:00.000.000/0001-00</p>
 
 
 	</footer>
