--- a/site01/index.html
+++ b/site01/index.html
@@ -44,11 +44,11 @@
 
 	<footer>
 		
-		<p><h3>FRED TREINAMENTOS LTDA</h3></p>
-		<p><b>CONTATOS:</b></p>
-		<p>WHATSAPP:(31) 985432808</p>
-		<p>EMAIL:fredericofernandes560@gmail.com.br</p>
-		<p>CNPJ:00.000.000/0001-00</p>
+		<h3>FRED TREINAMENTOS LTDA</h3>
+		<b>CONTATOS:</b><br>
+		WHATSAPP:(31) 985432808<br>
+		EMAIL:f<a href="mailto:fredericofernandes560@gmail.com.br">fredericofernandes560@gmail.com.br</a><br>
+		CNPJ:00.000.000/0001-00<br>
 
 
 	</footer>
