--- a/site01/index.html
+++ b/site01/index.html
@@ -43,11 +43,12 @@
 
 
 	<footer>
-		
+
+		<p>
 		<h3>FRED TREINAMENTOS LTDA</h3>
 		<b>CONTATOS:</b><br>
 		WHATSAPP:(31) 985432808<br>
-		EMAIL:f<a href="mailto:fredericofernandes560@gmail.com.br">fredericofernandes560@gmail.com.br</a><br>
+		EMAIL:<a href="mailto:fredericofernandes560@gmail.com.br">fredericofernandes560@gmail.com.br</a><br>
 		CNPJ:00.000.000/0001-00<br>
 
 
