update de codigo

--- a/site01/index.html
+++ b/site01/index.html
@@ -46,9 +46,10 @@
 		<br>
 		<h3>FRED TREINAMENTOS LTDA</h3>
 		<b>CONTATOS:</b><br>
-		WHATSAPP:(31) 985432808<br>
-		EMAIL:<a href="mailto:fredericofernandes560@gmail.com.br">fredericofernandes560@gmail.com.br</a><br>
-		CNPJ:00.000.000/0001-00<br>
+		WHATSAPP: <a style="color: #fff;" target="blank" href="https://wa.me/5531985432808">31985432808</a><br>
+
+		EMAIL: <a style="color: #fff;" href="mailto:fredericofernandes560@gmail.com.br">fredericofernandes560@gmail.com.br</a><br>
+		<span>CNPJ: 00.000.000/0001-00</span> <br>
 
 
 	</footer>
